tests/unit/default/syntax-error/128-add-fk-table-parens.e.t
---- IN ----
+FK%child(
---- OUT ----
---- ERR ----
syntax: expected <columns-ref-list-end> after `+FK%child(` instead of EOL at position 10 - at line 1
---- EXIT ----
1
